# VoteX

./: .env.example  .gitignore  README.md  bun.lockb  compose.yml  hardhat.config.js  index.js  package-lock.json  package.json  tailwind.config.js
bot/: .env.example  .gitignore  Dockerfile  pyproject.toml
bot/src/: __init__.py  app.py
client/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  bun.lockb  components.json  docker.next.config  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
client/public/: site.webmanifest
client/src/api/: contract.ts  face.ts  index.ts  ipfs.ts  number.ts
client/src/app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx  robots.js  robots.ts  sitemap.js  sitemap.ts
client/src/components/: cards.tsx  details-button.tsx  index.jsx
client/src/constants/: contract.js  contract.ts  devs.js  metadata.js  metadata.ts  pinata.js  pinata.ts
client/src/context/: contract.jsx  contract.tsx  user.tsx
client/src/hooks/: use-admin.ts  use-candidate.ts  use-context.ts  use-otp.ts  use-payment.ts  use-update-candidate.ts  use-update-voter.ts  use-voter.ts  use-window-dimension.js
client/src/lib/: freighter.js  (+4 more)
components/: index.js
components/About/: Banner.jsx  Company.jsx  Dev.jsx  Mission.jsx  Team.jsx
components/Contact/: ContactFrom.jsx
components/Global/: PopUp.jsx  ScrollToTop.jsx  Upload.jsx  UploadImg.jsx
components/Home/: Blog.jsx  HeroSection.jsx  Provide.jsx  Vote.jsx  WhyVote.jsx
components/RoadMap/: Steps.jsx
components/Team/: Banner.jsx  Member.jsx  Team.jsx
components/TeamDetail/: Banner.jsx  Details.jsx  TeamDetail.jsx
constants/: headers.js
context/: constants.js  context.jsx  index.jsx  value-converter.js  wallet.js
contracts/: VotingOrganization.sol
hooks/: use-voting-dapp.js
lib/: stellar.js
pages/: _app.jsx  about.jsx  all-candidates.jsx  all-voters.jsx  approve-candidates.jsx  approve-voters.jsx  approved-voters.jsx  candidate-details.jsx  candidate.jsx  contact.jsx  index.jsx  owner.jsx  roadmap.jsx  update-candidate.jsx  update-voter.jsx  voted-voters.jsx  voter-details.jsx  voter.jsx
public/: site.webmanifest
scripts/: deploy.js
server/: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml  face_recognition.py  face_verification.py  main.py  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: __init__.py  main.py
server/app/api/controllers/: verification.py
server/app/api/routes/: __init__.py
server/app/bot/: __init__.py  main.py
server/app/controllers/: __init__.py
server/src/: __init__.py  app.py
server/src/controllers/: __init__.py  contract.py  face.py  ipfs.py  number.py  recognition.py  verification.py
server/src/helpers/: __init__.py  file_payload.py  image_array.py  otp.py
server/src/lib/: pinata.py  redis.py  stellar.py  twilio.py
server/src/routes/: __init__.py  api.py  contract.py  face.py  ipfs.py  number.py  recognition.py  verification.py
src/app/: globals.css  layout.jsx  page.jsx
src/components/: index.jsx
src/constants/: contract.js  devs.js  headers.js  metadata.js
src/context/: index.jsx
src/hooks/: use-contract.js  use-window-dimension.js
src/lib/: axios.js  stellar.js  toast.js
src/providers/: ContractProvider.jsx  index.jsx
styles/: globals.css
utils/: index.js
web3/: Cargo.toml  deploy.ps1
web3/config/: history-archive.conf
web3/contract/: Cargo.toml
web3/scripts/: Deploy.ps1  deploy.sh  health-check.sh
(+181 files in other folders)
