[tool.poetry]
name = "democrachain-server"
version = "0.1.0"
description = ""
authors = ["Soorya U <sooryau7@gmail.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/soorya-u/DemocraChain"
homepage = "https://democrachain.soorya-u.dev"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
face-recognition = "^1.3.0"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.1"
stellar-sdk = "^12.0.0"
aiohttp = {extras = ["speedups"], version = "^3.11.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
