[tool.poetry]
name = "votex-server"
version = "0.1.0"
description = ""
authors = ["Soorya U <sooryau7@gmail.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/soorya-u/VoteX"
homepage = "https://votex.soorya-u.dev"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
face-recognition = "^1.3.0"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.1"
aiohttp = {extras = ["speedups"], version = "^3.11.8"}
redis = "^5.2.0"
aiobcrypt = "^3.2.0.post1"
twilio = "^9.3.7"
stellar-sdk = {extras = ["aiohttp"], version = "^12.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
